#pragma once

enum ExpenseSplitType {
    EQUAL,
    UNEQUAL,
    PERCENTAGE
};
